--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
 set-environment -g TMUX_SCRIPTS "$HOME/.config/tmux/scripts/"
-set -g default-command "exec $SHELL"
 
 set -g default-terminal "tmux-256color"
 set -a terminal-overrides ",alacritty:RGB"
@@ -9,13 +8,13 @@ set  -g status off
 set  -g prefix S-F3           # fake prefix (some command don't work without a prefix)
 set  -g base-index 1          # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
-setw -g automatic-rename on   # rename window to reflect current program
 set  -g renumber-windows on   # renumber windows when a window is closed
 set  -g escape-time 0         # no delay esc
 set  -g history-limit 5000    # busted history
 set  -g detach-on-destroy off # prevent detach on last panel is closed but there are other sessions
 set  -g status-interval 0     # faster panel update
-set  -g automatic-rename-format "#{?#{==:#{pane_current_command},#{b:SHELL}}, #{b:pane_current_path},#{?#{==:#{pane_current_command},nvim}, #{b:pane_current_path},#{pane_current_command}}}"
+setw -g automatic-rename on   # rename window to reflect current program
+setw -g automatic-rename-format "#{?#{==:#{pane_current_command},#{b:SHELL}}, #{b:pane_current_path},#{?#{==:#{pane_current_command},nvim}, #{b:pane_current_path},#{pane_current_command}}}"
 # aliases
 set -s command-alias[101] vsplit='split -h'
 set -s command-alias[102] vs='split -h'
@@ -97,12 +96,10 @@ bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
 #
 bind ` list-keys -N
-bind Enter new-window -S -n " iki" -c "$CLOUD_DIR/wiki" '${EDITOR:-vim} -c "Telescope find_files"'
 bind g new-window -n "lazygit" -c "#{pane_current_path}" lazygit
 bind d new-window -n "lazydocker" -c "#{pane_current_path}" lazydocker
 bind f run-shell "tmux display-popup -w 50 -h 15 -E '#{TMUX_SCRIPTS}/sessionizer $HOME/Repos/'" # run-shell because display-popup do not accepts FORMATS
 bind w choose-tree -Zs -K "#{e|+:#{line},1}"
-bind m display-popup -E "spt" # spotify cli
 bind ? split-window -l 40% "aichat"
 
 # plugins
