--- a/HOME_DIR/.config/hypr/hyprland.conf
+++ b/HOME_DIR/.config/hypr/hyprland.conf
@@ -1,38 +1,8 @@
 source = theme.conf
-source = envs.conf
 source = input.conf
 source = looknfeel.conf
 source = monitors.conf
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = alacritty
-$fileManager = nautilus --new-window
-$menu = wofi --show drun --sort-order=alphabetical
-
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = hypridle & mako & waybar & fcitx5 & udiskie
-exec-once = swaybg -i $(find ~/Pictures/Wallpapers -type f | shuf -n 1) -m fill
-exec-once = clipse -listen
-exec-once = dropbox-cli start
-exec-once = tmux start-server
-exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
-
+source = autostart.conf
 
 ###################
 ### PERMISSIONS ###
@@ -63,18 +33,23 @@ binds {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, C, exec, gtk-launch clipboard-manager
-bind = $mainMod, D, exec, gtk-launch docker-manager
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, I, exec, wofi-emoji
-bind = $mainMod, O, exec, paddle-ocr
-bind = $mainMod, P, exec, gtk-launch system-monitor
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, A, exec, uwsm app -- firefox --new-tab
+bind = $mainMod, C, exec, uwsm app -- clipboard-manager.desktop
+bind = $mainMod, D, exec, uwsm app -- docker-manager.desktop
+bind = $mainMod, E, exec, uwsm app -- nautilus --new-window
+bind = $mainMod, F, cyclenext
+bind = $mainMod, I, exec, uwsm app -- wofi-emoji
+bind = $mainMod, M, fullscreen
+bind = $mainMod, O, exec, uwsm app -- paddle-ocr
+bind = $mainMod, P, exec, uwsm app -- system-monitor.desktop
+bind = $mainMod, Q, exec, uwsm app -- alacritty
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, W, killactive,
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod SHIFT, L, exec, hyprlock
-bind = $mainMod SHIFT, P, exec, power-menu
+bind = $mainMod, SPACE, exec, uwsm app -- pkill -x wofi || uwsm app -- wofi --show drun --sort-order=alphabetical
+bind = $mainMod, comma, exec, uwsm app -- makoctl dismiss
+bind = $mainMod SHIFT, comma, exec, uwsm app -- makoctl dismiss --all
+bind = $mainMod SHIFT, L, exec, uwsm app -- hyprlock
+bind = $mainMod SHIFT, P, exec, uwsm app -- power-menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -154,18 +129,16 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = float,tag:floatwindow
-windowrule = size 70% 70%,tag:floatwindow
-windowrule = center,tag:floatwindow
+windowrule = float, tag:floatwindow
+windowrule = size 70% 70%, tag:floatwindow
+windowrule = center, tag:floatwindow
 
-windowrule = tag +floatwindow,class:^localhost\.(system-monitor|network-monitor|docker-manager|clipboard-manager)$
+windowrule = tag +floatwindow, class:^localhost\.(system-monitor|network-monitor|docker-manager|clipboard-manager|tridactyl-editor)$
 windowrule = tag +floatwindow, class:^(org.pulseaudio.pavucontrol|blueberry.py|org.twosheds.iwgtk|org.gnome.NautilusPreviewer)$
-windowrule = tag +floatwindow,class:(1Password|nwg-displays)
-windowrule = tag +floatwindow,class:(anki),title:((Anki|Edit|Add).*)
+windowrule = tag +floatwindow, class:^(1Password|nwg-displays)$
+windowrule = tag +floatwindow, class:(anki),title:((Anki|Edit|Add).*)
 
-workspace = 10, on-created-empty: xdg-open 'obsidian://open?vault=wiki'
+windowrule = opacity 1 0.5, tag:floatwindow
+windowrule = noblur, tag:floatwindow, focus:(0)
 
-# NVIDIA environment variables
-env = NVD_BACKEND,direct
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+workspace = 10, on-created-empty: uwsm app -- xdg-open 'obsidian://open?vault=wiki'
