--- a/HOME_DIR/.config/tmux/tmux.conf
+++ b/HOME_DIR/.config/tmux/tmux.conf
@@ -68,7 +68,8 @@ bind s display-menu -T "#[align=centre]#{pane_index} (#{pane_id})" -x P -y P \
 bind x display-menu -T "#[align=centre]#{pane_index} (#{pane_id})" -x P -y P \
   "Kill Pane" X { kill-pane } \
   "Kill #{pane_current_command}" k { run 'pgrep -P #{pane_pid} --newest #{pane_current_command} | xargs kill' } \
-  Respawn R { respawn-pane -k }
+  Respawn R { respawn-pane -k } \
+  "Kill Server" s { kill-server }
 
 # plugins
 set-environment -g TMUX_PLUGIN_MANAGER_PATH $HOME/.tmux/plugins
@@ -84,6 +85,8 @@ set -g @plugin 'Morantron/tmux-fingers'
 set -g @fingers-key Space
 set -g @fingers-main-action :paste:
 set -g @fingers-shift-action :copy:
+set -g @fingers-ctrl-action 'xargs tmux new-window nvim'
+set -g @fingers-alt-action :open:
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato, mocha
