--- a/applications/entries/clipboard-manager.desktop
+++ b/applications/entries/clipboard-manager.desktop
@@ -2,7 +2,7 @@
 Name=Clipboard Manager
 Comment=Manage clipboard with clipse
 Icon=input-keyboard
-Exec=alacritty --class=localhost.clipboard-manager --title='Clipboard' -e clipse
+Exec=alacritty --class=localhost.clipboard-manager --title="Clipboard" -e clipse
 Terminal=false
 Type=Application
 Categories=Utility;
