--- a/HOME_DIR/.config/hypr/looknfeel.conf
+++ b/HOME_DIR/.config/hypr/looknfeel.conf
@@ -17,7 +17,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 cursor {
@@ -87,9 +87,16 @@ windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
 
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+dwindle {
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+    force_split = 2 # Always split on the right
+}
+
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = slave
+    new_status = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
