--- a/applications/entries/system-monitor.desktop
+++ b/applications/entries/system-monitor.desktop
@@ -2,7 +2,7 @@
 Name=System Monitor
 Comment=Monitor system activities
 Icon=utilities-system-monitor
-Exec=alacritty --class=localhost.system-monitor --title='System Monitor' -e btm
+Exec=alacritty --class=localhost.system-monitor --title="System Monitor" -e btm
 Terminal=false
 Type=Application
 Categories=Utility;GTK;
