--- a/HOME_DIR/.config/hypr/autostart.conf
+++ b/HOME_DIR/.config/hypr/autostart.conf
@@ -7,6 +7,8 @@ exec-once = uwsm app -- waybar
 exec-once = uwsm app -- fcitx5
 exec-once = uwsm app -- udiskie
 exec-once = uwsm app -- swaybg -i $(find ~/Pictures/Wallpapers -type f | shuf -n 1) -m fill
-exec-once = uwsm app -- clipse -listen
+exec-once = uwsm app -- wl-clip-persist --clipboard regular --all-mime-type-regex '^(?!x-kde-passwordManagerHint).+'
 exec-once = uwsm app -- dropbox-cli start
+exec-once = uwsm app -- hyprsunset
+exec-once = GTK_IM_MODULE=fcitx uwsm app -- walker --gapplication-service
 exec-once = uwsm app -- alacritty
