--- a/HOME_DIR/.config/hypr/hyprland.conf
+++ b/HOME_DIR/.config/hypr/hyprland.conf
@@ -28,70 +28,64 @@ source = autostart.conf
 binds {
   workspace_back_and_forth = true
 }
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, A, exec, uwsm app -- firefox --new-tab
-bind = $mainMod, C, exec, uwsm app -- clipboard-manager.desktop
-bind = $mainMod, D, exec, uwsm app -- docker-manager.desktop
-bind = $mainMod, E, exec, uwsm app -- nautilus --new-window
-bind = $mainMod, F, cyclenext
-bind = $mainMod, I, exec, uwsm app -- wofi-emoji
-bind = $mainMod, M, fullscreen
-bind = $mainMod, O, exec, uwsm app -- paddle-ocr
-bind = $mainMod, P, exec, uwsm app -- system-monitor.desktop
-bind = $mainMod, Q, exec, uwsm app -- alacritty
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, W, killactive,
-bind = $mainMod, SPACE, exec, uwsm app -- pkill -x wofi || uwsm app -- wofi --show drun --sort-order=alphabetical
-bind = $mainMod, comma, exec, uwsm app -- makoctl dismiss
-bind = $mainMod SHIFT, comma, exec, uwsm app -- makoctl dismiss --all
-bind = $mainMod SHIFT, L, exec, uwsm app -- hyprlock
-bind = $mainMod SHIFT, P, exec, uwsm app -- power-menu
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
+bind = SUPER, A, exec, uwsm app -- firefox --new-tab
+bind = SUPER, C, exec, uwsm app -- walker --modules=clipboard
+bind = SUPER, D, exec, uwsm app -- docker-manager.desktop
+bind = SUPER, E, exec, uwsm app -- nautilus --new-window
+bind = SUPER, F, cyclenext
+bind = SUPER, H, movefocus, l
+bind = SUPER, J, movefocus, d
+bind = SUPER, K, movefocus, u
+bind = SUPER, L, movefocus, r
+bind = SUPER SHIFT, L, exec, uwsm app -- hyprlock
+bind = SUPER, M, fullscreen
+bind = SUPER, O, exec, uwsm app -- paddle-ocr
+bind = SUPER, P, exec, uwsm app -- system-monitor.desktop
+bind = SUPER SHIFT, P, exec, uwsm app -- power-menu
+bind = SUPER, Q, exec, uwsm app -- alacritty
+bind = SUPER, S, togglespecialworkspace, magic
+bind = SUPER SHIFT, S, movetoworkspace, special:magic
+bind = SUPER, V, togglefloating,
+bind = SUPER, V, centerwindow
+bind = SUPER, W, killactive,
+bind = SUPER, SPACE, exec, uwsm app -- walker
+bind = SUPER, comma, exec, uwsm app -- makoctl dismiss
+bind = SUPER SHIFT, comma, exec, uwsm app -- makoctl dismiss --all
+bind = , Hiragana_Katakana, exec, uwsm app -- input-mode -a "keyboard-us mozc"
+bind = ALT, Hiragana_Katakana, exec, uwsm app -- input-mode -a "keyboard-us-intl"
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = SUPER SHIFT, 1, movetoworkspace, 1
+bind = SUPER SHIFT, 2, movetoworkspace, 2
+bind = SUPER SHIFT, 3, movetoworkspace, 3
+bind = SUPER SHIFT, 4, movetoworkspace, 4
+bind = SUPER SHIFT, 5, movetoworkspace, 5
+bind = SUPER SHIFT, 6, movetoworkspace, 6
+bind = SUPER SHIFT, 7, movetoworkspace, 7
+bind = SUPER SHIFT, 8, movetoworkspace, 8
+bind = SUPER SHIFT, 9, movetoworkspace, 9
+bind = SUPER SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = SUPER, mouse_down, workspace, e+1
+bind = SUPER, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -108,9 +102,9 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshots
-bind = , PRINT, exec, hyprshot -m region
-bind = SHIFT, PRINT, exec, hyprshot -m window
-bind = CTRL, PRINT, exec, hyprshot -m output
+bind = , PRINT, exec, screenshot region
+bind = SHIFT, PRINT, exec, screenshot window
+bind = CTRL, PRINT, exec, screenshot output
 
 
 ##############################
@@ -131,14 +125,13 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 windowrule = float, tag:floatwindow
 windowrule = size 70% 70%, tag:floatwindow
-windowrule = center, tag:floatwindow
 
 windowrule = tag +floatwindow, class:^localhost\.(system-monitor|network-monitor|docker-manager|clipboard-manager|tridactyl-editor)$
 windowrule = tag +floatwindow, class:^(org.pulseaudio.pavucontrol|blueberry.py|org.twosheds.iwgtk|org.gnome.NautilusPreviewer)$
 windowrule = tag +floatwindow, class:^(1Password|nwg-displays)$
 windowrule = tag +floatwindow, class:(anki),title:((Anki|Edit|Add).*)
 
-windowrule = opacity 1 0.5, tag:floatwindow
-windowrule = noblur, tag:floatwindow, focus:(0)
+windowrule = opacity 1 0.5, floating:1, tag:floatwindow
+windowrule = noblur, floating:1, tag:floatwindow, focus:(0)
 
 workspace = 10, on-created-empty: uwsm app -- xdg-open 'obsidian://open?vault=wiki'
