--- a/HOME_DIR/.config/hypr/looknfeel.conf
+++ b/HOME_DIR/.config/hypr/looknfeel.conf
@@ -26,10 +26,6 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
     shadow {
         enabled = true
         range = 4
@@ -72,9 +68,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 0, 0, ease
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -101,7 +95,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    disable_splash_rendering = true
+    focus_on_activate = true
 }
-
